# ollama-rag

./: .gitignore  3_baseline_analysis.ipynb  3_baseline_report.py  4_analysis.ipynb  4_runner.py  README.md  pdf-rag.py  pyproject.toml  rag_config.py  rag_runner.py  requirements.txt
analysis/: 3_baseline_analysis.ipynb  4_analysis.ipynb  5_analysis.ipynb  6_analysis.ipynb
experiments/: 3_baseline_report.py  4_runner.py  5_runner.py  6_1_contextual_runner.py  6_runner.py  __init__.py
rag/: __init__.py  questions.py  rag_config.py  rag_runner.py
results/: chunk1200_overlap300_k10_reranking_ollama-ollama_llama3.2_nomic-embed-text.csv  chunk1200_overlap300_k3_ollama-ollama_llama3.2_nomic-embed-text.csv  chunk1200_overlap300_k3_ollama-ollama_llama3:8b_nomic-embed-text.csv  chunk1200_overlap300_k5_ollama-ollama_llama3.2_nomic-embed-text.csv  chunk300_overlap60_k3_ollama-ollama_llama3.2_nomic-embed-text.csv
tests/: README.md  __init__.py  conftest.py  test_rag_config.py  test_rag_runner.py
